--- a/test.ipynb
+++ b/test.ipynb
@@ -20,36 +20,41 @@
     "        x = self.ln1(y)\n",
     "        self.state = x[:self.state.shape[0]]\n",
     "        return x[self.state.shape[0]:]\n",
-    "\n"
+    "\n",
+    "    def cleanstate(self):\n",
+    "        self.state = torch.zeros_like(self.state)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.0000, 0.0000, 0.0000, 0.6891, 0.3421, 0.6232])\n",
-      "tensor(4.7219, grad_fn=<MseLossBackward0>)\n",
-      "tensor([ 0.1198, -0.5073,  0.0751,  0.2331,  0.3913,  0.3226],\n",
+      "tensor([0.0000, 0.0000, 0.0000, 0.0530, 0.0077, 0.4969])\n",
+      "tensor(1.6915, grad_fn=<MseLossBackward0>)\n",
+      "tensor([-0.2261, -0.2998, -0.0138,  0.0570,  0.2944,  0.5091],\n",
       "       grad_fn=<CatBackward0>)\n",
-      "tensor(2.0935, grad_fn=<MseLossBackward0>)\n"
+      "tensor(1.3751, grad_fn=<MseLossBackward0>)\n",
+      "tensor([-0.3627, -0.4427, -0.0582,  0.1260,  0.1269,  0.2219],\n",
+      "       grad_fn=<CatBackward0>)\n",
+      "tensor(0.3898, grad_fn=<MseLossBackward0>)\n"
      ]
     },
     {
      "ename": "RuntimeError",
-     "evalue": "Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward.",
+     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [6, 6]], which is output 0 of AsStridedBackward0, is at version 3; expected version 2 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True).",
      "output_type": "error",
      "traceback": [
       "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [10], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(y,\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m*\u001b[39minpt\u001b[38;5;241m+\u001b[39mprev_inpt\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m opt\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     15\u001b[0m opt\u001b[38;5;241m.\u001b[39mzero_grad()\n",
+      "Cell \u001b[1;32mIn [11], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(y,\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m*\u001b[39minpt\u001b[38;5;241m+\u001b[39mprev_inpt\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m opt\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     15\u001b[0m opt\u001b[38;5;241m.\u001b[39mzero_grad()\n",
       "File \u001b[1;32mc:\\Users\\gonza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\_tensor.py:396\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    387\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    388\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    389\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    390\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    394\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[0;32m    395\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[1;32m--> 396\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
       "File \u001b[1;32mc:\\Users\\gonza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\autograd\\__init__.py:173\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    168\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    170\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    171\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    172\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 173\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    174\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    175\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: Trying to backward through the graph a second time (or directly access saved tensors after they have already been freed). Saved intermediate values of the graph are freed when you call .backward() or autograd.grad(). Specify retain_graph=True if you need to backward through the graph a second time or if you need to access saved tensors after calling backward."
+      "\u001b[1;31mRuntimeError\u001b[0m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [6, 6]], which is output 0 of AsStridedBackward0, is at version 3; expected version 2 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True)."
      ]
     }
    ],
@@ -60,16 +65,22 @@
     "a = SMRNN(3,3,3)\n",
     "opt = optim.SGD(a.parameters(),lr=0.01)\n",
     "loss_func = F.mse_loss\n",
-    "prev_inpt = torch.rand(3)\n",
-    "for i in range(100):\n",
-    "    inpt = torch.rand(3)\n",
-    "    y = a.forward(inpt)\n",
-    "    loss = loss_func(y,3*inpt+prev_inpt/2)\n",
+    "epochs = 100\n",
+    "step_size = 5\n",
+    "for i in range(epochs):\n",
+    "    prev_inpt = torch.zeros(3)\n",
+    "    result = torch.zeros(3)\n",
+    "    for j in range(step_size):\n",
+    "        inpt = torch.rand(3)\n",
+    "        y = a.forward(inpt)\n",
+    "        result += inpt\n",
+    "        prev_inpt = inpt\n",
+    "    a.cleanstate()\n",
+    "    loss = loss_func(y,result)\n",
     "    print(loss)\n",
-    "    loss.backward(retain_graph=True)\n",
+    "    loss.backward()\n",
     "    opt.step()\n",
-    "    opt.zero_grad()\n",
-    "    prev_inpt = inpt"
+    "    opt.zero_grad()"
    ]
   }
  ],
