--- a/test.ipynb
+++ b/test.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,34 +27,140 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "tensor([0.0000, 0.0000, 0.0000, 0.0530, 0.0077, 0.4969])\n",
-      "tensor(1.6915, grad_fn=<MseLossBackward0>)\n",
-      "tensor([-0.2261, -0.2998, -0.0138,  0.0570,  0.2944,  0.5091],\n",
-      "       grad_fn=<CatBackward0>)\n",
-      "tensor(1.3751, grad_fn=<MseLossBackward0>)\n",
-      "tensor([-0.3627, -0.4427, -0.0582,  0.1260,  0.1269,  0.2219],\n",
-      "       grad_fn=<CatBackward0>)\n",
-      "tensor(0.3898, grad_fn=<MseLossBackward0>)\n"
+      "[Parameter containing:\n",
+      "tensor([[-0.2919, -0.0905,  0.2469,  0.1309, -0.2009,  0.3051],\n",
+      "        [ 0.0539, -0.3844,  0.2943, -0.2397, -0.1728, -0.1549],\n",
+      "        [ 0.0808,  0.1423,  0.3615,  0.2258,  0.0390,  0.1980],\n",
+      "        [ 0.1342, -0.3178,  0.2004, -0.2211,  0.2693, -0.0691],\n",
+      "        [ 0.0055, -0.0575,  0.1959, -0.0310,  0.1793, -0.3305],\n",
+      "        [-0.0303, -0.1960,  0.3597, -0.2945, -0.3965, -0.2889]],\n",
+      "       requires_grad=True), Parameter containing:\n",
+      "tensor([-0.4078, -0.3800, -0.1178, -0.3384,  0.1782, -0.0525],\n",
+      "       requires_grad=True)]\n"
      ]
-    },
+    }
+   ],
+   "source": [
+    "a = SMRNN(3,3,3)\n",
+    "print(list(a.parameters()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
     {
-     "ename": "RuntimeError",
-     "evalue": "one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [6, 6]], which is output 0 of AsStridedBackward0, is at version 3; expected version 2 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True).",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mRuntimeError\u001b[0m                              Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn [11], line 13\u001b[0m\n\u001b[0;32m     11\u001b[0m loss \u001b[38;5;241m=\u001b[39m loss_func(y,\u001b[38;5;241m3\u001b[39m\u001b[38;5;241m*\u001b[39minpt\u001b[38;5;241m+\u001b[39mprev_inpt\u001b[38;5;241m/\u001b[39m\u001b[38;5;241m2\u001b[39m)\n\u001b[0;32m     12\u001b[0m \u001b[38;5;28mprint\u001b[39m(loss)\n\u001b[1;32m---> 13\u001b[0m \u001b[43mloss\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mbackward\u001b[49m\u001b[43m(\u001b[49m\u001b[43mretain_graph\u001b[49m\u001b[38;5;241;43m=\u001b[39;49m\u001b[38;5;28;43;01mTrue\u001b[39;49;00m\u001b[43m)\u001b[49m\n\u001b[0;32m     14\u001b[0m opt\u001b[38;5;241m.\u001b[39mstep()\n\u001b[0;32m     15\u001b[0m opt\u001b[38;5;241m.\u001b[39mzero_grad()\n",
-      "File \u001b[1;32mc:\\Users\\gonza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\_tensor.py:396\u001b[0m, in \u001b[0;36mTensor.backward\u001b[1;34m(self, gradient, retain_graph, create_graph, inputs)\u001b[0m\n\u001b[0;32m    387\u001b[0m \u001b[39mif\u001b[39;00m has_torch_function_unary(\u001b[39mself\u001b[39m):\n\u001b[0;32m    388\u001b[0m     \u001b[39mreturn\u001b[39;00m handle_torch_function(\n\u001b[0;32m    389\u001b[0m         Tensor\u001b[39m.\u001b[39mbackward,\n\u001b[0;32m    390\u001b[0m         (\u001b[39mself\u001b[39m,),\n\u001b[1;32m   (...)\u001b[0m\n\u001b[0;32m    394\u001b[0m         create_graph\u001b[39m=\u001b[39mcreate_graph,\n\u001b[0;32m    395\u001b[0m         inputs\u001b[39m=\u001b[39minputs)\n\u001b[1;32m--> 396\u001b[0m torch\u001b[39m.\u001b[39;49mautograd\u001b[39m.\u001b[39;49mbackward(\u001b[39mself\u001b[39;49m, gradient, retain_graph, create_graph, inputs\u001b[39m=\u001b[39;49minputs)\n",
-      "File \u001b[1;32mc:\\Users\\gonza\\AppData\\Local\\Programs\\Python\\Python310\\lib\\site-packages\\torch\\autograd\\__init__.py:173\u001b[0m, in \u001b[0;36mbackward\u001b[1;34m(tensors, grad_tensors, retain_graph, create_graph, grad_variables, inputs)\u001b[0m\n\u001b[0;32m    168\u001b[0m     retain_graph \u001b[39m=\u001b[39m create_graph\n\u001b[0;32m    170\u001b[0m \u001b[39m# The reason we repeat same the comment below is that\u001b[39;00m\n\u001b[0;32m    171\u001b[0m \u001b[39m# some Python versions print out the first line of a multi-line function\u001b[39;00m\n\u001b[0;32m    172\u001b[0m \u001b[39m# calls in the traceback and some print out the last line\u001b[39;00m\n\u001b[1;32m--> 173\u001b[0m Variable\u001b[39m.\u001b[39;49m_execution_engine\u001b[39m.\u001b[39;49mrun_backward(  \u001b[39m# Calls into the C++ engine to run the backward pass\u001b[39;49;00m\n\u001b[0;32m    174\u001b[0m     tensors, grad_tensors_, retain_graph, create_graph, inputs,\n\u001b[0;32m    175\u001b[0m     allow_unreachable\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m, accumulate_grad\u001b[39m=\u001b[39;49m\u001b[39mTrue\u001b[39;49;00m)\n",
-      "\u001b[1;31mRuntimeError\u001b[0m: one of the variables needed for gradient computation has been modified by an inplace operation: [torch.FloatTensor [6, 6]], which is output 0 of AsStridedBackward0, is at version 3; expected version 2 instead. Hint: enable anomaly detection to find the operation that failed to compute its gradient, with torch.autograd.set_detect_anomaly(True)."
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor(5.8353, grad_fn=<MseLossBackward0>)\n",
+      "tensor(7.4490, grad_fn=<MseLossBackward0>)\n",
+      "tensor(6.2432, grad_fn=<MseLossBackward0>)\n",
+      "tensor(7.5064, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.4746, grad_fn=<MseLossBackward0>)\n",
+      "tensor(6.2934, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.5678, grad_fn=<MseLossBackward0>)\n",
+      "tensor(9.4560, grad_fn=<MseLossBackward0>)\n",
+      "tensor(10.6814, grad_fn=<MseLossBackward0>)\n",
+      "tensor(7.2727, grad_fn=<MseLossBackward0>)\n",
+      "tensor(6.9119, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.5695, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.9041, grad_fn=<MseLossBackward0>)\n",
+      "tensor(7.5735, grad_fn=<MseLossBackward0>)\n",
+      "tensor(6.2432, grad_fn=<MseLossBackward0>)\n",
+      "tensor(8.8434, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.1797, grad_fn=<MseLossBackward0>)\n",
+      "tensor(6.9900, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.9345, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.9002, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.7712, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.9045, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.6350, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.3714, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.2529, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.9065, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.4446, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.4576, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.5161, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.7201, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.9327, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.4651, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.2740, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.2122, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.8482, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.7795, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.1200, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.4002, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.6281, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.0073, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.3789, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.8007, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.2113, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.8078, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6885, grad_fn=<MseLossBackward0>)\n",
+      "tensor(5.8034, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.6374, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.0671, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.5554, grad_fn=<MseLossBackward0>)\n",
+      "tensor(3.5028, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.0513, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.5037, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.9514, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.1314, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.0878, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.4044, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6380, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6196, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.3317, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.7502, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.6658, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.7801, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.4886, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.3911, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6588, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.5063, grad_fn=<MseLossBackward0>)\n",
+      "tensor(4.5470, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.0568, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.9967, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.8598, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.0224, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.7206, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6580, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6794, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.9630, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.8205, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.1504, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.1467, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.5828, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.3974, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6372, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.9280, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.5794, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.4274, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.6511, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.5437, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.0974, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.5530, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.0542, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.0993, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.4019, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.8959, grad_fn=<MseLossBackward0>)\n",
+      "tensor(2.2300, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.3578, grad_fn=<MseLossBackward0>)\n",
+      "tensor(1.2234, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.2399, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.9005, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.2884, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.1914, grad_fn=<MseLossBackward0>)\n",
+      "tensor(0.8856, grad_fn=<MseLossBackward0>)\n"
      ]
     }
    ],
